--- a/personal-dashboard/src/app/components/clock-widget/clock-widget.html
+++ b/personal-dashboard/src/app/components/clock-widget/clock-widget.html
@@ -1,4 +1,4 @@
 <div class="widget clock-widget">
-  <div class="time">{{ formattedTime }}</div>
-  <div class="date">{{ formattedDate }}</div>
+  <div class="time">{{ formattedTime() }}</div>
+  <div class="date">{{ formattedDate() }}</div>
 </div>
