--- a/personal-dashboard/src/app/components/dashboard/dashboard.html
+++ b/personal-dashboard/src/app/components/dashboard/dashboard.html
@@ -19,5 +19,9 @@
     <div class="grid-item traffic-section">
       <app-traffic-widget></app-traffic-widget>
     </div>
+
+    <div class="grid-item sports-section">
+      <app-sports-widget></app-sports-widget>
+    </div>
   </div>
 </div>
